# Ditado

./: .env.example  Dockerfile  docker-compose.yml
backend/: Dockerfile  main.py  pyproject.toml
backend/providers/: __init__.py  base.py  deepgram.py  elevenlabs.py
frontend/: app.js  index.html  style.css
